# iogenius

./: .gitignore  LICENSE  pyproject.toml
src/iogenius/: __init__.py  functions.py
